--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="white-text" style="padding: 12px 7px 5px 7px;"><img src="profile.jpg">Isha</a></li>
+        <li><a href="#" class="white-text" style="padding: 12px 7px 5px 7px;"><img src="profile.jpg">Rohit</a></li>
         <li title="Home"><a href="#" class="white-text"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
         <li title="Requests"><a href="#" class="white-text"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 </a></li>
